--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ai-sdk/groq": "^1.2.9",
-    "ai": "^4.3.19",
-    "axios": "^1.13.2",
-    "cheerio": "^1.1.2",
+    "@ai-sdk/google": "^2.0.45",
+    "@ai-sdk/groq": "^2.0.32",
+    "ai": "^5.0.110",
     "cloudinary": "^2.5.1",
     "mongoose": "^8.8.4",
     "next": "^15.1.3",
     "nodemailer": "^6.9.16",
     "pdf-lib": "^1.17.1",
     "pdf-parse": "^2.4.5",
+    "pdf2json": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "tesseract.js": "^6.0.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
